--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
             
             <!-- first slide--> 
 
-        <div class="slide">
+<!--    <div class="slide">
             <div class="name">Кира Иванова</div>
             <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus diam risus morbi nulla dictum. Urna mi orci gravida placerat amet, eu, aliquet facilisis aliquet. Dolor praesent nam ornare fringilla enim nibh donec sit imperdiet. Amet, diam duis eu sit et. Volutpat vestibulum a lectus sed blandit.
             </div>
-    </div>
+    </div> -->        
 
             <!-- second slide-->
 
-        <div class="slide">
+<!--        <div class="slide">
             <div class="name">Яна Жернова</div>
             <div class="text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacinia eget mattis orci aliquam enim tincidunt gravida aliquet ut. Ipsum vulputate morbi felis, lobortis tincidunt. Pretium dictum odio feugiat auctor diam sit viverra gravida. Lobortis arcu rhoncus, mi mi vitae feugiat amet, vitae ac. Cursus diam turpis iaculis nisi sit. Vel blandit et sit elit vestibulum feugiat proin tempor, justo. Diam commodo, pellentesque at porttitor tristique faucibus faucibus morbi. Bibendum pretium lacus, tempus viverra vitae odio nunc eget.
             </div>
-        </div>
+        </div> -->
 
             <!-- third slide -->
 
